--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -157,7 +157,7 @@
 /* table */
 td,th {
 	border:1px solid black;
-	text-align:center;
+	text-align:center !important;
 	vertical-align:middle !important;
 	padding: 5px 0px 5px 0px;
 }
