--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,21 @@
 @import 'chosen';
 @import 'table_specifications';
 
+/* Validation purr best_in_place */
+.purr {
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  width: 250px;
+  padding: 15px;
+  background-color: rgba(155,0,0,0.7);
+  border-radius: 5px;
+  z-index: 9999;
+  color: white;
+  &:first-letter { text-transform: uppercase; }
+}
+
+
 /* loader */
 .loader {
 	box-sizing: border-box;
@@ -145,3 +160,9 @@ body{
 }
 }
 /* end login form */
+
+/* statuses */
+textarea#status_description {
+    resize: vertical;
+}
+/* end statuses */
