--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<tr data-toggle="collapse" data-target=".hidden<%= project.id %>" data-parent="table" class="accordion-toggle" id="project_<%= project.id %>">
+<tr id="project_<%= project.id %>">
 	<td class="column1"><%= link_to project.object_name, project %></td>
 	<td class="column2"><%= project.client.name %></td>
 	<td class="column3"><%= project.created_at %></td>
@@ -11,7 +11,8 @@
 	<td class="column6"><%= project.deadline %></td>
 	<td class="column7"><%= best_in_place [project], :planned_budget %></td>
 	<td class="column8"><%= Project::sum_specifications(project.specifications, "sum") %></td>
-	<td class="column9"><%= best_in_place [project], :amount_contract %></td>
+	<td class="column9"><%= best_in_place [project], :amount_contract %>&nbsp;&nbsp;&nbsp;&nbsp;<span class="accordion-toggle glyphicon glyphicon-menu-down" data-toggle="collapse" data-target=".hidden<%= project.id %>" data-parent="table"></td>
+
 </tr>
 <tr class="hider">
 	<td class="column1">
