view heder butoon

--- a/app/views/blocks/_menu.html.erb
+++ b/app/views/blocks/_menu.html.erb
@@ -42,6 +42,7 @@
           <li><%= link_to t('type_furnitures.type_furniture'), type_furnitures_path %></li>
         <% end %>
       </ul>
+        <span class="navbar-form navbar-left"><%= link_to "", destroy_user_session_path, method: 'delete', class: "btn btn-primary glyphicon glyphicon-log-out" %></span>
     </div><!-- /.navbar-collapse -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
