--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -24,6 +24,7 @@
                 { id: 'products_select',
                 class: 'chosen-select' }
             %>
+            <%= u.text_field :name %>
           </div>
         <% end %>
           <div class="form-group" id="type_furniture">
