--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -4,29 +4,26 @@
   
     <div class="row">
       <div class="form-group col-sm-6" id="factory">
-        <%= fields_for(@brand_model) do |u| %>
-          <div class="form-group" id="type_furniture">
-            <%= label_tag :factories_select, 'Фабрика', :class => "control-label" %><br>
-            <%= u.select :factory_id,
-                @factories.map { |o| 
-                [o.brand, o.id, {"id" => o.id}]},
-                { include_blank: true },
-                { id: 'factories_select',
-                class: 'chosen-select' }
-            %>
+        <div class="form-group" id="type_furniture">
+          <%= label_tag :factories_select, 'Фабрика', :class => "control-label" %><br>
+          <%= f.select :factory_id,
+              @factories.map { |o| 
+              [o.brand, o.id, {"id" => o.id}]},
+              { include_blank: true },
+              { id: 'factories_select',
+              class: 'chosen-select' }
+          %>
           </div>
           <div class="form-group" id="brand_model">
             <%= label_tag :products_select,'Модель', :class => "control-label" %><br>
-            <%= u.select :name,
+            <%= f.select :brand_model_name,
                 @brand_models.map { |o| 
                 [o.name, o.name, {"id" => o.id}]},
                 { include_blank: true },
                 { id: 'products_select',
                 class: 'chosen-select' }
             %>
-            <%= u.text_field :name %>
           </div>
-        <% end %>
           <div class="form-group" id="type_furniture">
             <%= f.label :type_furniture_id, 'Тип мебели', :class => "control-label" %><br>
             <%= f.collection_select :type_furniture_id, TypeFurniture.all,:id,:name, {include_blank: false}, {class: 'chosen-select', selected: 1} %>
