--- a/app/assets/javascripts/table_specifications.js.erb
+++ b/app/assets/javascripts/table_specifications.js.erb
@@ -10,10 +10,10 @@ $(document).ready(function() {
 		});
 		client.isAuthenticated();
 
- //    activateBestInPlace('[data-attribute="unit_price_factory"]')
- //    activateBestInPlace('[data-attribute="number_of"]')
- //    activateBestInPlace('[data-attribute="interest_percent"]')
- //    activateBestInPlace('[data-attribute="arhitec_percent"]')
+ //    activateBestInPlace('[data-bip-attribute="unit_price_factory"]')
+ //    activateBestInPlace('[data-bip-attribute="number_of"]')
+ //    activateBestInPlace('[data-bip-attribute="interest_percent"]')
+ //    activateBestInPlace('[data-bip-attribute="arhitec_percent"]')
 
 	// $('body').on('click','#modalpict a',function(){
 	// 	$('#modalpict').modal('hide');
