--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -80,24 +80,29 @@
 		margin-left:35px;
 	}
 	/*- size columns table -*/
-
+	.npp {
+		width: 1.26%;
+	}
 	.photo {
 		width: 8.64%;
 	}
+	.photos_with_npp {
+		width: 9.9%;
+	}
 	.factory {
-		width: 9.42% !important;
+		width: 8.42% !important;
 	}
 	.model {
-		width: 9.42% !important;
+		width: 8.42% !important;
 	}
 	.article {
-		width: 9.42% !important;
+		width: 8.42% !important;
 	}
 	.finishing_for_client {
-		width: 5.84%;
+		width: 8.58%;
 	}
 	.type_furniture {
-		width: 9.42%;
+		width: 8.42%;
 	}
 	.size {
 		width: 8.64%;
