--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -36,7 +36,7 @@
 	<td class="column4">
 		<div class="accordion-body collapse hidden<%= project.id %>">
 			<div>Дата отгрузки</div>
-			<div class="datapic"><input name="<%= project.id %>" data-attribute="date_delivery_client" value="<%= project.date_delivery_client%>" class="form-control" id="dp_<%= project.id %>" /></td>
+			<div class="datapic"><input name="<%= project.id %>" data-bip-attribute="date_delivery_client" value="<%= project.date_delivery_client%>" class="form-control" id="dp_<%= project.id %>" /></td>
 		</div>
 	</td>
 	<td class="column5">
