--- a/app/views/table_specifications/_form.html.erb
+++ b/app/views/table_specifications/_form.html.erb
@@ -7,7 +7,7 @@
       <tbody> 
       <%= form_for(@brand_model) do |u| %>
       <tr>
-        <td class="photo" id="photos"></td>
+        <td class="photo photos_with_npp" id="photos"></td>
           <%= f.hidden_field :photo_id, value: 0 %>
           <%= f.hidden_field :photo_base64_form %>
         <td class="factory">
