fix pdf generation and add table specification light renderin PDf

--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -41,7 +41,7 @@
             <p><%= best_in_place pst, :interest_percent %> %</p>
             <p style="white-space:nowrap;"><span class="interest-e"><%= ts.company_interest %></span> €</p>
           </td>
-          <td><%= ts.unit_with_interest_light %></td>
+          <td><%= ts.unit_price %></td>
           <td><%= ts.with_interest %></td>
           <td>
             <p style="white-space:nowrap;">Интерес %: <br> <%= best_in_place pst, :arhitec_percent %>
