--- a/app/views/tables/pdfs/unit_specification.pdf.erb
+++ b/app/views/tables/pdfs/unit_specification.pdf.erb
@@ -1,4 +1,5 @@
 <%= wicked_pdf_stylesheet_link_tag "pdf" %>
+<% tables = @table_specifications || @table_specification_lights %>
 <div class="header">
 	<div class="logo"><span id="dizaap">DIZAAP </span><br>
 	<span id="upgrade">UPGRADE THE WORLD</span>
@@ -24,7 +25,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<% @table_specifications.each do |ts| %>
+		<% tables.each do |ts| %>
 		<tr>
 			<td class="photo"><%= image_tag (ts.image(ts.photo_id)).gsub('https', 'http') %></td>
 			<td class="brand_model"><%= ts.product.brand_model.name %></td>
@@ -32,7 +33,7 @@
 			<td class="size">
 				<%= image_tag ts.image_pdf(ts.size_image_id)  %>
 				<br>
-				<%= ts.finishing_for_client %>
+				<%= ts.size %>
 			</td>
 			<td class="number_of"><%= ts.number_of %></td>
 			<% if ts.group.nil? %>
