--- a/app/views/table_specification_lights/index.html.erb
+++ b/app/views/table_specification_lights/index.html.erb
@@ -5,7 +5,7 @@
 	  <%= link_to t('table.print_pdf'), project_specification_table_specification_lights_path(@project, @specification, @table_specification_light, format: "pdf") %>
 	  <div class="print_sum">
 	    <%= label_tag(:print_sum, t('table.print_sum')) %>
-	    <%= check_box("print", "sum", {checked: @specification.print_sum}, @specification.id) %>
+	    <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
 	  </div>
 	  <%= render 'table' %>
 	  <%= link_to t('table.new_row'), new_project_specification_table_specification_light_path, remote: true , class: "table-button btn btn-primary", id: "form_button_light", style: "hidden" %>
