--- a/app/views/table_specifications/index.html.erb
+++ b/app/views/table_specifications/index.html.erb
@@ -4,7 +4,7 @@
   <%= link_to t('table.print_pdf'), project_specification_table_specifications_path(@project, @specification, @table_specification, format: "pdf") %>
   <div class="print_sum">
     <%= label_tag(:print_sum, t('table.print_sum')) %>
-    <%= check_box("print", "sum", {checked: @specification.print_sum}, @specification.id) %>
+    <%= check_box("print", @specification.id, {checked: @specification.print_sum}, @specification.id) %>
   </div>
   
   <%= render 'table_specifications/photo/dialog' %>
