--- a/app/views/table_specifications/_table.html.erb
+++ b/app/views/table_specifications/_table.html.erb
@@ -75,9 +75,9 @@
               <a class="shvg_percent invoker" href="#">ШВГ</a>
               <br>
             <% else %>
-              <span class="unv"><%= ts.v_sum %></span>
+              <span class="unv"><%= ts.v_sum if ts.product %></span>
             <% end %>
-            <input type="hidden" class="unit_v" value="<%= ts.unit_v %>">
+            <input type="hidden" class="unit_v" value="<%= ts.unit_v if ts.product %>">
             <input type="hidden" name="table_specification[packing]" class="packing" value="0">
             <input type="hidden" name="table_specification[add_to_delivery]" class="add_to_delivery" value="0">
             <p>Гр.</p>
