--- a/app/views/table_specification_lights/_table.html.erb
+++ b/app/views/table_specification_lights/_table.html.erb
@@ -2,6 +2,7 @@
   <table width="100%" id="table_specification">
      <thead>
       <tr>
+        <th class="npp">п/п</th>
         <th class="photo">Изображение</th>
         <th class="factory">Фабрика</th>
         <th class="model">Модель</th>
@@ -22,18 +23,19 @@
        <% @table_specification_lights.each do |ts| %>
          <% pst = [@project, @specification, ts] %>
          <tr row-id="<%= ts.id %>" product-id="<%= ts.product_id %>">
+          <td class="npp"><%= best_in_place pst, :order %></td>
           <td class="photos"><%= render "tables/general_methods/photo/first_in_table", ts: ts %></td>
           <td class="factory"><%= ts.product.brand_model.factory.brand %></br>
             <span class="light_factor"><%= ts.product.brand_model.factory.light_factor %></span>
           </td>
           <td><%= ts.product.brand_model.name %></td>
           <td><%= ts.product.article %></td>
-          <td><%= best_in_place pst, :finishing_for_client %></td>
+          <td><%= best_in_place pst, :finishing_for_client, as: :textarea %></td>
           <td><%= ts.product.type_furniture.name %></td>
           <td class="size_images">
             <%= render "tables/general_methods/size_image/first_in_table", ts: ts %>
             <br>
-            <%= best_in_place pst, :size %></td>
+            <%= best_in_place pst, :size, as: :textarea %></td>
           <td><%= best_in_place pst, :unit_price_factory %></td>
           <td class="factory-sum"><%= ts.price_from_nil %></td>
           <td><%= best_in_place pst, :number_of %></td>
