--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,7 +19,9 @@
       </tr>
     </thead>
 
+    <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
     <tbody id="products">
+      
       <%= render @products %>      
     </tbody>
   </table>
