--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -166,3 +166,9 @@ textarea#status_description {
     resize: vertical;
 }
 /* end statuses */
+
+/* LOAD MORE PRODUCT*/
+#load_more_products {
+    display: none;
+    margin-bottom: 10px; /* Some margin to separate it from the footer */
+}
