--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -19,6 +19,7 @@
       </tr>
     </thead>
 
+    <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
     <tbody id="products">
       
       <%= render @products %>      
