--- a/app/views/products/_list.html.erb
+++ b/app/views/products/_list.html.erb
@@ -1,14 +1,17 @@
 <div id="filterrific_results">
+  <div>
+    <%= page_entries_info products %>
+  </div>
  <div class="new-product"></div>
   <table class="table table-bordered table-striped table-hover">
     <thead>
       <tr>
-        <th><%= 'Изображение' %></th>
-        <th><%= 'Фабрика' %></th>
-        <th><%= t('products.model') %></th>
-        <th><%= t('products.article') %></th>
-        <th><%= t('type_furnitures.type_furniture') %></th>
-        <th><%= t('products.price') %></th>
+        <th>Изображениеч</th>
+        <th><%= filterrific_sorting_link(@filterrific, :factory) %></th>
+        <th><%= filterrific_sorting_link(@filterrific, :brand_model) %></th>
+        <th><%= filterrific_sorting_link(@filterrific, :article) %></th>
+        <th><%= filterrific_sorting_link(@filterrific, :type_furniture) %></th>
+        <th><%= filterrific_sorting_link(@filterrific, :price) %></th>
         <th> Действие </th>
       </tr>
     </thead>
@@ -18,7 +21,6 @@
       <%= render @products %>
     </tbody>
   </table>
-  <%= link_to 'Больше продуктов', products_path(page: @products.next_page), class: 'load-more-products btn btn-success center-block', remote: true if @products.next_page %>   
 </div>
 
-<%= will_paginate products %>
+<%= will_paginate products, renderer: BootstrapPagination::Rails %>
