fixing view sorting & filtering

--- a/app/assets/stylesheets/table_specifications.scss
+++ b/app/assets/stylesheets/table_specifications.scss
@@ -307,7 +307,7 @@ thead.tableFloatingHeaderOriginal {
 input:focus,textarea:focus {
   outline:none;
 }
-a.btn {
+a.btn.btn-primary {
   color:#fff !important;
   text-decoration:none;
 }
